logo do listy a prekryti logoboxu

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: #e5e0e0;
+  background-color: #eeeae4;
   display: flex;
   flex-direction: column;
   font-family: cormorant;
@@ -93,7 +93,7 @@ a.kontakt {
   /*hamburger a krizek*/
   position: absolute;
   right: 15px; /* Pevná vzdálenost od pravého okraje */
-  top: 10px; /* Vertikálně vycentrovaný */
+  top: 15px; /* Vertikálně vycentrovaný */
 
   width: 25px; /* Pevná šířka místo 3vw */
   aspect-ratio: 1/1;
@@ -143,9 +143,35 @@ a.kontakt {
   bottom: 30%;
 }
 
+/*logo small v navigaci*/
+
+.logoS {
+  width: 50%;
+  height: auto;
+  margin-left: -20%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.logoS.visible {
+  opacity: 1;
+  visibility: visible;
+}
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*navigace na klik*/
 .nav {
-  /*navigace na klik*/
-  background-color: #243c5a;
+  background-color: #070c12;
   position: fixed;
   z-index: 9000;
   width: 100%;
@@ -194,7 +220,11 @@ a.nav-link {
   height: 300px;
   background-color: #070c12;
   display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
+
 @media only screen and (min-width: 800px) {
   .logobox {
     height: 500px;
@@ -204,15 +234,27 @@ a.nav-link {
   width: 100%;
   height: 80%;
   padding: 0 5% 0 5%;
-opacity: 0;
+  opacity: 0;
   animation: fadeIn 4s ease-in-out forwards;
 }
 
 @keyframes fadeIn {
   to {
     opacity: 1;
-  }}
+  }
+}
 
-.biotext{
+/*překrytí logoboxu obsahem:*/
+.content-wrapper {
+  position: relative;
+  z-index: 2;
+  background-color: #eeeae4;
+}
+
+.biotext {
+  padding: 0 10% 0 10%;
+}
+
+.mobox h2 {
   padding: 0 10% 0 10%;
 }
