--- a/index.css
+++ b/index.css
@@ -223,22 +223,22 @@ a.nav-link {
 }
 
 .logobox {
-  width: 100vw;
+  width: 100%;
   height: 60vh;
   background-color: #070c12;
   display: flex;
   position: sticky;
   top: 0;
   z-index: 1;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.logobox:hover {
-  transform: scale(1.1);
 }
 
 @media only screen and (min-width: 800px) {
   .logobox {
     height: 500px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .logobox:hover {
+    transform: scale(1.1);
   }
 }
 .logo {
@@ -265,7 +265,7 @@ a.nav-link {
 /*-*/
 
 .eko {
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -277,14 +277,10 @@ a.nav-link {
   position: sticky;
   top: 0;
   z-index: 1;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.eko:hover {
-  transform: scale(1.1);
 }
 
 .styl {
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("img/styleksilt.jpg");
@@ -294,20 +290,41 @@ a.nav-link {
   position: sticky;
   top: 0;
   z-index: 1;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.styl:hover {
-  transform: scale(1.1);
 }
 
 @media only screen and (min-width: 800px) {
   .eko,
   .styl {
     height: 70vh;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .eko:hover,
+  .styl:hover {
+    transform: scale(1.1);
+  }
+}
+
+@media only screen and (max-width: 799px) {
+  .logobox,
+  .eko,
+  .styl,
+  .shops {
+    transform: scale(0.95);
+    opacity: 0.8;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+  }
+
+  .logobox.visible,
+  .eko.visible,
+  .styl.visible,
+  .shops.visible {
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
 .shops {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -315,9 +332,17 @@ a.nav-link {
   top: 0;
   z-index: 3;
 }
+.shops h2 {
+  padding: 2% 10% 2% 10%;
+  font-size: 25px;
+  font-family: montserrat;
+  font-weight: 500;
+  color: #eeeae4;
+  text-decoration: overline 1px #c69b34;
+}
 .vobox {
   background-color: #243c5a;
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -326,7 +351,7 @@ a.nav-link {
 }
 
 .mobox {
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   background-image: url(img/banner.jpg);
   background-size: cover;
