--- a/index.css
+++ b/index.css
@@ -63,7 +63,8 @@ body {
   /* max-width: fit-content;*/
   position: absolute;
   right: 18px;
-  top: 5px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .menu a {
@@ -155,7 +156,8 @@ a.kontakt {
   box-sizing: border-box; /* padding se počítá dovnitř */
   position: absolute;
   left: 32px; /* stejná vzdálenost jako má .ham od pravého okraje */
-  top: 7.5px; /* vycentrované vertikálně */
+  top: 50%;
+  transform: translateY(-50%); /* vycentrované vertikálně */
 
   opacity: 0;
   visibility: hidden;
@@ -166,6 +168,7 @@ a.kontakt {
   opacity: 1;
   visibility: visible;
 }
+
 .hidden {
   opacity: 0;
   visibility: hidden;
@@ -737,6 +740,7 @@ label {
 }
 @media only screen and (min-width: 800px) {
   .footer p {
+    width: 100vw;
     padding: 2% 5% 0 5%;
   }
 }
