--- a/velko.css
+++ b/velko.css
@@ -238,25 +238,64 @@ a.nav-link {
 }
 
 .velkohead {
-    display:block;
-padding: 5% 10% 5% 0%;
-margin:0;
+  display: block;
+  padding: 5% 10% 5% 0%;
+  margin: 0;
   font-size: 25px;
   font-family: montserrat;
   font-weight: 500;
-  color:#070c12;
-  
-  text-decoration: overline 1px #c69b34;}
+  color: #070c12;
+  text-decoration: overline 1px #c69b34;
+}
 .text {
   padding: 0% 10% 5% 10%;
-    font-size: 18px;}
+  font-size: 18px;
+}
+
+.nabidka {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10%;
+}
+.offers {
+  background: linear-gradient(135deg, rgb(36, 60, 90), rgba(36, 60, 90, 0.773));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  width: 70%;
+  padding: 1%;
+  margin: 2%;
+  border-radius: 0 0 0 10px;
+  color: #eeeae4;
+  font-weight: 500;
+  text-align: center;
+  border: 3px solid #c69b34;
+  position: relative;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.offers.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.objednavka {
+  width: 100vw;
+  background-color: #070c12;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .forms {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color:#070c12;
+  color: #eeeae4;
   font-style: bold;
-  width:60vw;
+  width: 60vw;
 }
 .forms p {
   padding: 0 10% 5% 10%;
@@ -275,12 +314,12 @@ label {
 }
 .forms button {
   background-color: #c69b34;
-  width:max-content;
+  width: max-content;
   height: 3rem;
   border-radius: 2px 2px 2px 10px;
   margin: 2rem;
   margin-bottom: 3rem;
-  color:#070c12;
+  color: #070c12;
   font-size: 17px;
 }
 .forms button:hover {
