--- a/index.css
+++ b/index.css
@@ -465,8 +465,8 @@ a.nav-link {
 
 .eko {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("img/ksilt.jpg");
-  background-size: cover;
+    url("img/ksiltvellep.jpg");
+  background-size: contain;
   background-position: center;
 }
 
