--- a/velko.css
+++ b/velko.css
@@ -445,37 +445,47 @@ label {
 
 @media only screen and (min-width: 800px) {
   .forms {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem 3rem;
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
     width: 80vw;
-    align-items: start;
+    align-items: center;
+  }
+
+  .formLeft {
+    flex: 1;
+    display: flex;
+    align-items: center;
   }
 
   .formsText {
-    grid-column: 1;
-    grid-row: 1 / -1;
     padding: 0 2rem 0 0 !important;
-    align-self: start;
     text-align: left;
     line-height: 1.6;
   }
 
-  .forms label,
-  .forms textarea,
-  .forms input,
-  .forms button {
-    grid-column: 2;
+  .formRight {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
   }
 
-  .forms input,
-  .forms textarea {
+  .formRight label {
+    margin-bottom: 0.3rem;
+    padding-bottom: 0;
+  }
+
+  .formRight input,
+  .formRight textarea {
     width: 100%;
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
 
-  .forms button {
-    justify-self: center;
-    margin-top: 1rem;
+  .formRight button {
+    align-self: center;
+    margin-top: 1.5rem;
   }
 }
 
@@ -542,6 +552,7 @@ label {
 }
 
 .footer {
+  width:100%;
   padding: 10% 10% 0 10% 0;
   text-align: center;
 }
