--- a/index.css
+++ b/index.css
@@ -628,6 +628,9 @@ a.nav-link {
 }
 
 .vobox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #243c5a;
   width: 100%;
   height: 40vh;
@@ -636,8 +639,21 @@ a.nav-link {
 .vobox:hover {
   transform: scale(1.1);
 }
+.vobox h4,
+.vobox p,
+.mobox h4,
+.mobox p {
+  padding: 0 10% 0 10%;
+  font-size: 16px;
+  font-family: montserrat;
+  font-weight: 400;
+  color: #eeeae4;
+}
 
 .mobox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 40vh;
   background-image: url(img/banner.jpg);
@@ -658,6 +674,12 @@ a.nav-link {
   .mobox {
     height: 70vh;
     width: 50vw;
+  }
+  .vobox h4,
+  .vobox p,
+  .mobox h4,
+  .mobox p {
+    font-size: 20px;
   }
 }
 
