--- a/index.css
+++ b/index.css
@@ -465,7 +465,7 @@ a.nav-link {
 
 .eko {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("img/ksiltvellep.jpg");
+    url("img/ksilt800x350PS.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -474,7 +474,7 @@ a.nav-link {
 .styl {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("img/styleksilt.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -484,13 +484,13 @@ a.nav-link {
   position: sticky;
   top: 0;
   z-index: 1;
-  height: 50vh;
+  height: 70vh;
 }
 
 .eko,
 .styl {
   width: 100%;
-  height: 50vh;
+  height: 70vh;
   position: relative;
   top: 0;
   z-index: 1;
@@ -499,6 +499,7 @@ a.nav-link {
   justify-items: baseline;
   overflow: hidden;
   cursor: pointer;
+  background-repeat: no-repeat;
 }
 .eko h2,
 .styl h2 {
@@ -549,12 +550,14 @@ a.nav-link {
   .styl-wrapper {
     height: 70vh;
   }
-
+.eko{
+   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("img/ksilt1350.jpg");
+}
   .eko,
   .styl {
-    height: 70vh;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    background-size: contain;
+       transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background-size: cover;
   }
   .eko:hover,
   .styl:hover {
@@ -659,7 +662,11 @@ a.nav-link {
   justify-content: center;
   width: 100%;
   height: 40vh;
-  background-image: linear-gradient(rgba(16, 15, 15, 0.344), rgba(14, 13, 13, 0.1)), url(img/banner.jpg);
+  background-image: linear-gradient(
+      rgba(16, 15, 15, 0.344),
+      rgba(14, 13, 13, 0.1)
+    ),
+    url(img/banner.jpg);
   background-size: cover;
   background-position: center;
   backdrop-filter: blur(10px);
@@ -949,7 +956,7 @@ label {
   .eko-wrapper {
     max-width: 1350px;
     margin: 0 auto;
-    max-height:max-content;
+    max-height: max-content;
   }
 
   .eko {
@@ -960,7 +967,7 @@ label {
   .styl-wrapper {
     max-width: 1350px;
     margin: 0 auto;
-    max-height:max-content;
+    max-height: max-content;
   }
 
   .styl {
@@ -973,11 +980,12 @@ label {
     max-width: 1350px;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;  
+    flex-direction: row;
     justify-content: center;
   }
 
-  .vobox, .mobox {
+  .vobox,
+  .mobox {
     width: 675px;
     height: 40vh;
   }
