--- a/index.css
+++ b/index.css
@@ -466,7 +466,7 @@ a.nav-link {
 .eko {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("img/ksilt800x350PS.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -557,7 +557,7 @@ a.nav-link {
   .eko,
   .styl {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    background-size: cover;
+    background-size: contain;
   }
   .eko:hover,
   .styl:hover {
@@ -890,13 +890,17 @@ label {
 .footer {
   padding: 10% 10% 0 10% 0;
   text-align: center;
+  font-size: 14px;
+  margin: 1rem 0 1rem 0;
 }
+
 .footer p {
   background-color: #070c12;
   color: #eeeae4;
   margin: 0;
   padding: 5%;
   text-align: center;
+  font-size: 10px;
 }
 @media only screen and (min-width: 800px) {
   .footer p {
