--- a/index.css
+++ b/index.css
@@ -650,6 +650,7 @@ a.nav-link {
   width: 100%;
   height: 40vh;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-shadow: #070c12 2px 1px 5px;
 }
 .vobox:hover {
   transform: scale(1.1);
@@ -663,6 +664,10 @@ a.nav-link {
   font-family: montserrat;
   font-weight: 400;
   color: #eeeae4;
+}
+.mobox h2,
+.vobox h2 {
+  font-family: forum;
 }
 .mobox h2 {
   text-decoration: overline 1px #1a2d44;
@@ -679,6 +684,7 @@ a.nav-link {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-shadow: #070c12 2px 1px 5px;
 }
 .mobox:hover {
   transform: scale(1.1);
@@ -1024,6 +1030,18 @@ label {
     font-size: 16px;
     text-align: center;
     width: 100%;
+  }
+
+  .logobox:hover {
+    transform: none;
+  }
+
+  .logo {
+    transition: transform 0.3s ease;
+  }
+
+  .logobox:hover .logo {
+    transform: scale(1.4);
   }
 }
 
